--- a/package.json
+++ b/package.json
@@ -10,11 +10,6 @@
     "build:preload": "cd ./packages/preload && vite build",
     "build:renderer": "cd ./packages/renderer && vite build",
     "compile": "cross-env MODE=production npm run build && electron-builder build --config .electron-builder.config.js --dir --config.asar=false",
-    "test": "npm run test:main && npm run test:preload && npm run test:renderer && npm run test:e2e",
-    "test:e2e": "npm run build && vitest run",
-    "test:main": "vitest run -r packages/main --passWithNoTests",
-    "test:preload": "vitest run -r packages/preload --passWithNoTests",
-    "test:renderer": "vitest run -r packages/renderer --passWithNoTests",
     "watch": "node scripts/watch.mjs",
     "typecheck:main": "tsc --noEmit -p packages/main/tsconfig.json",
     "typecheck:preload": "tsc --noEmit -p packages/preload/tsconfig.json",
@@ -31,13 +26,10 @@
     "cross-env": "7.0.3",
     "electron": "23.1.3",
     "electron-builder": "23.6.0",
-    "happy-dom": "8.9.0",
-    "playwright": "1.31.2",
     "prettier": "^2.8.4",
     "typescript": "4.9.5",
     "unplugin-auto-expose": "0.0.4",
-    "vite": "4.1.4",
-    "vitest": "0.29.2"
+    "vite": "4.1.4"
   },
   "dependencies": {
     "react": "^18.2.0",
