--- a/packages/main/tsconfig.json
+++ b/packages/main/tsconfig.json
@@ -13,6 +13,5 @@
       "/@/*": ["./src/*"]
     }
   },
-  "include": ["src/**/*.ts", "../../types/**/*.d.ts"],
-  "exclude": ["**/*.spec.ts", "**/*.test.ts"]
+  "include": ["src/**/*.ts", "../../types/**/*.d.ts"]
 }
