--- a/packages/preload/tsconfig.json
+++ b/packages/preload/tsconfig.json
@@ -10,6 +10,5 @@
     "types": ["node"],
     "baseUrl": "."
   },
-  "include": ["src/**/*.ts", "../../types/**/*.d.ts"],
-  "exclude": ["**/*.spec.ts", "**/*.test.ts"]
+  "include": ["src/**/*.ts", "../../types/**/*.d.ts"]
 }
