--- a/package.json
+++ b/package.json
@@ -19,17 +19,17 @@
     "format": "npx prettier --write \"**/*.{js,mjs,cjs,ts,mts,cts,vue,json}\""
   },
   "devDependencies": {
-    "@types/node": "18.15.3",
+    "@types/node": "^18.15.3",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react-swc": "^3.2.0",
-    "cross-env": "7.0.3",
+    "cross-env": "^7.0.3",
     "electron": "23.1.3",
     "electron-builder": "23.6.0",
     "prettier": "^2.8.4",
-    "typescript": "4.9.5",
+    "typescript": "^4.9.5",
     "unplugin-auto-expose": "0.0.4",
-    "vite": "4.1.4"
+    "vite": "^4.1.4"
   },
   "dependencies": {
     "react": "^18.2.0",
